--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -1,8 +1,8 @@
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Nature & Wildlife Photographic Artistry by Vicky Wang', 
-  description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
-  pageURL:'photography', thumbnailImgURL: 'vickywang_web.png'
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Nature & Wildlife by Vicky Wang', 
+  description:'Capturing the beauty of nature', 
+  pageURL:'photography', thumbnailImgURL: './medium_default_wood_reflection.jpg'
   }) %>
 <!--Head-->
 
@@ -17,14 +17,14 @@
     currentPage: 'PHOTOGRAPHY',
     PageUrl:`/`
     }) %> <div class="blankHM"></div>
-  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!, `}) %>
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 Hey there, welcome!`}) %>
 
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
     ShowIntroTitle1:true,
     ShowIntroTitle2:false,
     ShowIntroTitle3:false,
     ShowIntroTitle4:false,
-    introTitle1: `Welcome to my photography journey, where I aim to capture the natural world in all its beauty and complexity.
+    introTitle1: `I love capturing the beauty of nature. 
 
 `,
     divider1: false, 
@@ -35,7 +35,7 @@
     introTitle4: ``
   }) %>
   <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
-    paragraphTxt:`Through my lens, I seek to share the breathtaking landscapes and intricate details that make nature so captivating. Each photograph tells a story, inviting you to see the wonders of the world from a fresh perspective. This passion for exploration and storytelling drives me to connect others with the remarkable moments I find in nature.`
+    paragraphTxt:`—its breathtaking landscapes and all the little details that make it amazing. Every photo tells a story and invites you to see the world in a new way. I’m excited to share these moments with you!`
   }) %>
 
 
