--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Vicky W. | UX Designer', 
   description:'Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.', 
-  pageURL:'', thumbnailImgURL: 'vickywang_web.png'
+  pageURL:'', thumbnailImgURL: 'vickywang_photography.png'
   }) %>
 <!--Head-->
 
