--- a/templates/babyquip/index.ejs
+++ b/templates/babyquip/index.ejs
@@ -103,20 +103,8 @@
 
     <div class="ProjectBanner displayLaptop">
 
-      <img src="image_monitor.png" alt="">
-      <div class="ProjectBannerInnerND">
-        <div class="blankHS"></div>
-        <h2 class="colorWhite">GEAR RENTAL</h2>
-        <h1 class="fontWeight700 specialTextBabyQuip colorWhite">Must Have</h1>
+      <img src="image_monitor.jpg" alt="">
 
-        <h3 class="colorWhite">for Holiday Travel</h3>
-        <div class="blankHXS"></div>
-
-
-        <button class="Button_Holiday">RENT NOW</button>
-        <div class="blankHXS"></div>
-
-      </div>
 
     </div>
 
