--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -39,13 +39,13 @@
               <img src="/icon/LOGO_2.svg" alt="VW Studio Logo V0" class=" logo logo-0">
               <img src="/icon/LOGO_3.svg" alt="VW Studio Logo V1" class=" logo logo-1">
             </div>
-            <h2> <strong class="colorYellowVW700"> VICKY WANG</strong> </h2>
+            <h1> <strong class="colorYellowVW700"> VICKY WANG</strong> </h1>
 
 
           </div>
         </div>
         <div class="Grid-cell">
-            <h6>&#160; &#160; UX Design | Product Design </h6>
+          <h6>&#160; &#160; UX Design | Product Design </h6>
         </div>
 
       </div>
@@ -55,124 +55,53 @@
       <div class="Grid Grid--gutters Grid--1of3">
 
         <div class="Grid-cell">
-
-
           <div class="element">
             <h3> <strong class="colorYellowVW700"> EDUCATION</strong> </h3>
 
-            <h5><strong>University of California, Berkeley </strong></h5>
+   
+
+            <h4><strong>University of California, Berkeley </strong></h4>
             <h6 class="textItalic"> August 2015 - May 2017</h6>
             <h6 class="textItalic"> August 2018 - May 2019</h6>
 
-            <div class="blankHTiny"></div>
 
-            <h5 class="fontWeight400 Grey700">Master of Architecture</h5>
+            <h5 class="fontWeight400">Master of Architecture</h5>
 
             <h6>College of Environmental Design, 3-year Program</h6>
 
             <h6>Architecture & Building Science/Technology </h6>
+            <div class="blankHTiny"></div>
 
-          </div>
-          <div class="element">
-            <h5> <strong>Beijing University of Technology </strong> </h5>
+            <h4> <strong>Beijing University of Technology </strong> </h4>
             <h6 class="textItalic"> September 2009 - July 2013</h6>
-            <div class="blankHTiny"></div>
 
-            <h5 class="fontWeight400 Grey700">Bachelor of Art</h5>
+            <h5 class="fontWeight400">Bachelor of Art</h5>
             <h6> Art &amp; Design &amp; Landscape Design </h6>
-          </div>
-          <div class="element">
-            <h5> <strong>Google UX Design Professional Certificate </strong> </h5>
-            <h6 class="textItalic"> Online class, Completed August 2021</h6>
             <div class="blankHTiny"></div>
 
-            <h6>Google UX certificate on Coursera</h6>
+            <h4> <strong>Certifications </strong> </h4>
 
-
-
-          </div>
-          <div class="element">
-            <h5> <strong>Codecademy </strong> </h5>
-            <h6 class="textItalic"> March - May 2023</h6>
-            <div class="blankHTiny"></div>
-
-            <h6>Learn User Research: Generative</h6>
-            <h6>Learn Design Thinking: Ideation</h6>
-            <h6>Learn Interaction Design</h6>
-            <h6>Introduction to UI and UX Design </h6>
-
-            <h6>Learn Responsive Design</h6>
-            <h6>Learn Navigation Design</h6>
-            <h6>Learn JavaScript</h6>
-
-            <br>
-            <h6 class="textItalic"> June 2023</h6>
-
-            <h6>Front-End Engineer </h6>
-          </div>
-          <div class="element">
-            <h5> <strong>Udemy </strong> </h5>
-
-            <h6 class="textItalic"> July 2024</h6>
-
-            <h6>The Complete JavaScript Course:
-              From Zero to Expert </h6>
-          </div>
-
-
+        </div>
 
           <div class="element">
 
             <h3> <strong class="colorYellowVW700"> SKILLS</strong> </h3>
             <h5> <strong>Design & Research</strong> </h5>
-            <h6>User-Centered Design</h6>
-            <h6>User Research</h6>
-            <h6>Usability Testing</h6>
-            <h6>Information Architecture</h6>
+            <h6>UX Design, Usability Testing, User Research, Wireframing, Prototyping</h6>
+            <h6>Design Systems, Responsive Design, Interaction Design, Visual Design</h6>
 
-            <h6>Wireframing</h6>
-            <h6>Prototyping</h6>
-            <h6>Design System</h6>
-            <h6>Interaction Design</h6>
-            <h6>Responsive and Adaptive Design</h6>
-            <h6>Visual Design</h6>
-
-            <h6>Project Management</h6>
-
-          </div>
-          <div class="element">
 
             <h5> <strong>Software</strong> </h5>
-            <h6>Figma</h6>
-            <h6>Adobe XD </h6>
-            <h6>Sketch</h6>
-            <h6>Adobe Creative Suite </h6>
+            <h6>Figma, Adobe XD, Sketch, Adobe Creative Suite</h6>
 
-
-
-          </div>
-
-          <div class="element">
-            <h5> <strong> Programming</strong> </h5>
-            <h6> HTML/CSS/JavaScript</h6>
-
-            <h6> EJS(Embedded JavaScript templates)</h6>
-            <h6> jQuery</h6>
-
-
-            <h6> JavaScript</h6>
+            <h5> <strong>Technical Skills</strong> </h5>
+            <h6>HTML, CSS, JavaScript, JQuery</h6>
+            <h6>Rhino, AutoCAD, 3D Max, Unity</h6>
 
           </div>
-          <div class="element">
-            <h5> <strong>3D Design & Fabrication Tools</strong> </h5>
-            <h6> Unity </h6>
-            <h6> 3Dmax Studio, Rhino, SketchUp </h6>
-            <h6> Grasshopper, Ladybug, DIVA </h6>
-            <h6> 3D Printing </h6>
-            <h6> 3D Scanner (NextEngine 3D) </h6>
-            <h6> CNC (Techno Isel 3-axis CNC router) </h6>
-            <h6> Laser Cutter, Blade Cutter (Zund S3 Digital) </h6>
-          </div>
+
+
+
 
         </div>
 
@@ -182,21 +111,20 @@
             <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
 
 
-            <h5><strong>BabyQuip | Senior User Experience Designer </strong></h5>
+            <h4><strong>BabyQuip | Senior User Experience Designer </strong></h4>
             <h6 class="textItalic">Oct. 2024 - Present, Full-time</h6>
 
             <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Conducted usability tests on multiple platforms.</li>
-              <div class="blankHTiny"></div>
+              <li class="listCircle">Conducted usability testing across platforms to identify pain points and optimize workflows for the baby gear rental marketplace.</li>
+              <li class="listCircle">Led the redesign of the consumer-facing mobile app, improving booking flow and usability.</li>
+              <li class="listCircle">Updated and refined website filters to enhance search accuracy and user experience.</li>
+              
             </ul>
           </div>
           <div class="element">
-            <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
-
-
-            <h5><strong>BookYourPet | User Experience Designer </strong></h5>
+            <h4><strong>BookYourPet | User Experience Designer </strong></h4>
 
             <h6 class="textItalic">Feb. 2024 - Oct. 2024, Full-time</h6>
             <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
@@ -204,96 +132,60 @@
             <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Grew the B2B user base from 0 to 500+ through strategic design initiatives,
-                contributing to overall business growth.</li>
-              <div class="blankHTiny"></div>
+              <li class="listCircle">Scaled the B2B user base from 0 to 500+ through strategic design and streamlined workflows, reducing booking time to under 1 minute.</li>
+              <li class="listCircle">Transitioned onboarding to a self-service process, increasing adoption and reducing support overhead.</li>
+              <li class="listCircle">Redesigned the B2C mobile booking experience, driving a 169% increase in conversions and cutting booking time by 6 minutes.</li>
+              <li class="listCircle">Established a scalable design system to improve product consistency and developer efficiency.</li>
 
-              <li class="listCircle">Streamlined workflows to reduce booking time to under 1 minute, improving
-                user satisfaction and operational efficiency.
-              </li>
-              <div class="blankHTiny"></div>
 
-              <li class="listCircle">Transitioned onboarding from a white-glove service to a scalable
-                self-onboarding process, leading to increased adoption and reduced support overhead.
-              </li>
-              <div class="blankHTiny"></div>
 
-              <li class="listCircle">Led the redesign of the B2C mobile booking experience, driving a 169%
-                increase in booking conversions and reducing booking time by 6 minutes.</li>
-
-              <div class="blankHTiny"></div>
-
-              <li class="listCircle">Developed upsell strategies, increasing average transaction value by 14%
-                through add-ons and memberships.</li>
-              <div class="blankHTiny"></div>
-
-              <li class="listCircle">Established a scalable design system, improving developer efficiency and
-                product consistency across mobile and web platforms.</li>
-              <div class="blankHTiny"></div>
-
-              <li class="listCircle">Collaborated with PMs and developers to align design initiatives with
-                business objectives, ensuring successful execution and delivery.</li>
-              <div class="blankHTiny"></div>
-
-              <li class="listCircle">Contributed to product roadmap development with tools like Trello and Notion,
-                accelerating project delivery and enhancing cross-functional alignment.</li>
 
             </ul>
           </div>
           <div class="element">
 
-            <h5><strong>LASO Health | Product Designer </strong></h5>
+            <h4><strong>LASO Health | Product Designer </strong></h4>
             <h6 class="textItalic">Aug. 2023 - Jan. 2024, Part-time Contractor</h6>
             <div class="blankHTiny"></div>
 
-
             <ul>
-              <li class="listCircle">Led the 0-1 launch of the Admin Panel for user management and sales teams,
-                collaborating closely with PMs and developers.</li>
-              <div class="blankHTiny"></div>
+              <li class="listCircle">Led the 0-1 launch of an Admin Panel for user management and sales teams.</li>
+              <li class="listCircle">Developed a cost-benefit calculator that boosted subscription conversions by simplifying prescription savings for customers.</li>
+              <li class="listCircle">Improved clarity and usability of the design system for mobile and web.</li>
 
-              <li class="listCircle">Developed a cost-benefit calculator that boosted subscription conversions,
-                helping customers easily understand their prescription savings.
-              </li>
-              <div class="blankHTiny"></div>
 
-              <li class="listCircle">Revitalized the design system for mobile and web, improving clarity and ease
-                of use for designers and developers.
-              </li>
-              <div class="blankHTiny"></div>
 
-              <li class="listCircle">Conducted user research and implemented a responsive system for web landing
-                product pages.</li>
+
             </ul>
           </div>
           <div class="element">
-            <h5><strong>Modernized Mobile LLC | UX Designer </strong></h5>
+            <h4><strong>Modernized Mobile LLC | UX Designer </strong></h4>
             <h6 class="textItalic">June. 2023 - Aug.2023, Part-time Contractor</h6>
             <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Designed a tablet-based admin panel for the 'Clean Spaces' app, replicating
-                key features and functionality from the consumer mobile application.</li>
+              <li class="listCircle">Designed a tablet-based admin panel for the 'Clean Spaces' app, adapting features from the mobile app.</li>
+
+
+
+
+
             </ul>
           </div>
           <div class="element">
-            <h5><strong>VW Studio | Freelancer </strong></h5>
+            <h4><strong>VW Studio | Freelancer </strong></h4>
             <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
             <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Designed and developed a portfolio website from scratch using HTML, CSS,
-                JavaScript, and EJS, deployed on AWS. </li>
+              <li class="listCircle">Designed and maintained a responsive portfolio website using HTML, CSS, JavaScript, and EJS, deployed on AWS with version control via GitHub.</li>
+
+
+
+
+
             </ul>
-            <div class="blankHTiny"></div>
-            <ul>
-              <li class="listCircle">Utilized GitHub for version control to manage updates and iterations.</li>
-            </ul>
-            <div class="blankHTiny"></div>
-            <ul>
-              <li class="listCircle">Updated and maintained UI components and a responsive grid system for the
-                site.</li>
-            </ul>
+
           </div>
           <div class="blankHXS"></div>
 
