--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -58,14 +58,14 @@
           <div class="element">
             <h3> <strong class="colorYellowVW700"> EDUCATION</strong> </h3>
 
-   
+
 
             <h4><strong>University of California, Berkeley </strong></h4>
             <h6 class="textItalic"> August 2015 - May 2017</h6>
             <h6 class="textItalic"> August 2018 - May 2019</h6>
 
 
-            <h5 class="fontWeight400">Master of Architecture</h5>
+            <h6 class="fontWeight400">Master of Architecture</h6>
 
             <h6>College of Environmental Design, 3-year Program</h6>
 
@@ -75,13 +75,27 @@
             <h4> <strong>Beijing University of Technology </strong> </h4>
             <h6 class="textItalic"> September 2009 - July 2013</h6>
 
-            <h5 class="fontWeight400">Bachelor of Art</h5>
+            <h6 class="fontWeight400">Bachelor of Art</h6>
             <h6> Art &amp; Design &amp; Landscape Design </h6>
             <div class="blankHTiny"></div>
 
             <h4> <strong>Certifications </strong> </h4>
+            <h6 class="fontWeight400">Google UX Design Professional Certificate (2021)</h6>
+            <h6 class="fontWeight400">Codecademy:</h6>
+            <h6>User Research (Apr 2023)</h6>
+            <h6>Design Thinking (Apr 2023)</h6>
 
-        </div>
+            <h6>Interaction Design (May 2023)</h6>
+            <h6>JavaScript (Mar 2023)</h6>
+
+
+            <h6 class="fontWeight400">Udemy:</h6>
+            <h6>Become a Product Manager: Learn the Skills & Get the Job (Dec 2024)</h6>
+            <h6>The Complete JavaScript Course: From Zero to Expert! (In Progress, Jun 2024)</h6>
+
+
+
+          </div>
 
           <div class="element">
 
@@ -98,6 +112,23 @@
             <h6>HTML, CSS, JavaScript, JQuery</h6>
             <h6>Rhino, AutoCAD, 3D Max, Unity</h6>
 
+          </div>
+
+
+          <div class="element">
+
+            <h3> <strong class="colorYellowVW700"> ARCHITECTURAL DESIGN </strong> </h3>
+            <h5><strong>Buro OS | Architectural Designer </strong></h5>
+            <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
+
+            <h5><strong>In Design Studio | Summer Intern </strong></h5>
+            <h6 class="textItalic">May. 2017 - Aug.2017</h6>
+
+
+            <h5><strong>PDI Design Group | Architectural Designer </strong></h5>
+            <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
+            <h5><strong>Do Union | Designer </strong></h5>
+            <h6 class="textItalic">Jul. 2010 - May.2012</h6>
           </div>
 
 
@@ -120,7 +151,7 @@
               <li class="listCircle">Conducted usability testing across platforms to identify pain points and optimize workflows for the baby gear rental marketplace.</li>
               <li class="listCircle">Led the redesign of the consumer-facing mobile app, improving booking flow and usability.</li>
               <li class="listCircle">Updated and refined website filters to enhance search accuracy and user experience.</li>
-              
+
             </ul>
           </div>
           <div class="element">
@@ -179,78 +210,19 @@
 
             <ul>
               <li class="listCircle">Designed and maintained a responsive portfolio website using HTML, CSS, JavaScript, and EJS, deployed on AWS with version control via GitHub.</li>
-
-
-
-
-
             </ul>
-
-          </div>
-          <div class="blankHXS"></div>
-
-
-          <h3><strong class="colorYellowVW700"> ARCHITECTURAL DESIGN</strong></h3>
-
-          <div class="element">
-            <h5><strong>Buro OS | Architectural Designer </strong></h5>
-            <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
-            <div class="blankHTiny"></div>
-
-            <ul>
-              <li class="listCircle">Main tasks at Buro OS are modifying building massing, updating design
-                packages, cooperating visualization teams, and producing 2d graphics and 3d digital models.
-              </li>
-            </ul>
-
-          </div>
-
-          <div class="element">
-            <h5><strong>In Design Studio | Summer Intern </strong></h5>
-            <h6 class="textItalic">May. 2017 - Aug.2017</h6>
-            <div class="blankHTiny"></div>
-
-            <ul>
-              <li class="listCircle">Conducted zoning code research
-              </li>
-              <li class="listCircle">Produced elevation, section and details documents
-              </li>
-            </ul>
-
-          </div>
-
-          <div class="element">
-            <h5><strong>PDI Design Group | Architectural Designer </strong></h5>
-            <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
-            <div class="blankHTiny"></div>
-
-            <ul>
-              <li class="listCircle">Produced digital model and renderings.
-              </li>
-              <li class="listCircle">Generated building materials palette for facade updates
-              </li>
-            </ul>
-
-          </div>
-          <div class="element">
-            <h5><strong>Do Union | Designer </strong></h5>
-            <h6 class="textItalic">Jul. 2010 - May.2012</h6>
-            <div class="blankHTiny"></div>
-
-
-
           </div>
         </div>
       </div>
+      <div class="blankHXXS"></div>
 
 
 
-      <div class="blankHS"></div>
 
     </div>
+    <div class="blankHM"></div>
+
   </div>
-  </div>
-  <div class="blankHS"></div>
 
 </body>
 
