--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -127,6 +127,71 @@
       spacing:''
       }) %>
       <!-- Arrow -->
+
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutters u-textCenter">
+          <div class="Grid-cell">
+            <div class="element">
+              <h1 class="TextPoppins fontWeight100 Grey800"> Marketplace, Partner </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="blankHXS"></div>
+        <div class="Grid Grid--holly-grail Grid--center">
+          <div class="Grid-cell main">
+            <div class="element">
+
+              <div class="paddingXL borderRadiusL gradient_background2">
+                <a href="/byp_b2b_subscription/">
+                  <img src="/projectImages/babyquip_inventorymanagement.png" alt="Business Booking Experience"></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid-cell aside aside-1">
+
+            <div class="element">
+              <%- include(`${templatePath}/shared/base_chip`, {
+                chipSmallTxt: '1-2 Feature Enhancement',
+                  colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
+              }) %>
+              <div class="blankHTiny"></div>
+              <h1 class="specialTextS fontWeight700">Business-Facing Inventory Management
+
+
+              </h1>
+              <div class="blankHTiny"></div>
+              <div class="blankHTiny"></div>
+
+              <ul>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Comprehensive Inventory Control:</span> Enabled business users (Quality Providers) to efficiently manage their gear—edit, organize, list/unlist, and remove items.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Better Category Visibility:</span> Improved the system to show unlisted categories, encouraging a wider range of inventory and helping BabyQuip grow its offerings.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Streamlined Organization:</span> Addressed usability challenges where users struggled to manage and categorize their inventory effectively.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Business Growth Insights:</span> Helped users understand how their inventory impacts their BabyQuip landing page, improving visibility and rental success.
+                </li>
+              </ul>
+
+            </div>
+            <div class="element">
+              <a href="/byp_b2b_subscription/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
+                </button></a>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+
+
+      <div class="blankHXS"></div>
+
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
@@ -137,7 +202,7 @@
         </div>
       </div>
 
-      <div class="blankHXXS"></div>
+      <div class="blankHS"></div>
 
       <div class="wrapper">
 
@@ -219,7 +284,6 @@
                 <li class="listCircle"> <span class="TextPoppins fontWeight500">Increased Conversions:</span> Achieved a 20% growth in trial-to-paid subscriptions.
 
                 </li>
-         
 
 
 
@@ -594,7 +658,7 @@
                 <li class="listCircle"> <span class="TextPoppins fontWeight400">Future Vision: </span> Gain a glimpse into the future of targeted marketing strategies.
                 </li>
               </ul>
-         
+
 
 
             </div>
@@ -890,7 +954,7 @@
     <%- include('shared/comp_textualElements_arrow', {message: 'Timeline' }) %>
     <!-- Arrow -->
 
-    <div class="blankHXXS"></div>    
+    <div class="blankHXXS"></div>
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
@@ -901,7 +965,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="page timeline-5-2" data-uia-timeline-skin="5">
       <div class="uia-timeline">
         <div class="uia-timeline__container">
@@ -919,7 +983,7 @@
                     <ul>
                       <li>&#9675; Marketplace </li>
                     </ul>
-     
+
                   </div>
                 </div>
               </div>
@@ -932,7 +996,7 @@
                     <h3 class="page__job-name fontWeight400">User Experience Designer</h3>
                     <h6 class="TextPoppins textItalic">2021 – 2024</h6>
                     <h6 class="TextPoppins textItalic">Full-time &#64; BookYourPet</h6>
-  
+
                     <h4 class="fontWeight400 colorYellowVW700">Business SaaS Booking App</h4>
                     <ul>
                       <li>&#9675; Pet service booking system
