--- a/templates/projects.ejs
+++ b/templates/projects.ejs
@@ -25,14 +25,15 @@
     <div class="Grid Grid--full Grid--gutter u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <h1 class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</h1>
+          <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Passionate about creating</h1>
-          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle fontWeight700">experiences</h1>
+          <h1 class="specialTextTitle fontWeight700">Designing UX that’s </h1>
+          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">for users & businesses.</h1>
+
 
           </h1>
         </div>
