--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -28,11 +28,11 @@
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Designing UX that’s </h1>
-          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700">for users & businesses.</h1>
+          <h1 class="specialTextTitle fontWeight700">Designing experience that’s </h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
 
 
           </h1>
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
 
       <div class="wrapper">
 
@@ -138,8 +138,8 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background1">
-                <a href="/byp_b2b_booking">
-                  <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience"></a>
+                
+                  <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience">
               </div>
             </div>
 
@@ -170,10 +170,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
         </div>
         <div class="blankHS"></div>
@@ -182,8 +179,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/byp_b2b_subscription/">
-                  <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -219,10 +215,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_subscription/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+ 
           </div>
 
         </div>
@@ -247,8 +240,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                <a href="/byp_b2c_booking">
-                  <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -282,10 +274,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+ 
           </div>
 
         </div>
@@ -311,8 +300,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/byp_b2b_SaaS/">
-                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -342,10 +330,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/byp_b2b_SaaS/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
 
         </div>
@@ -373,8 +358,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background1">
-                <a href="/savings_calculator/">
-                  <img src="/projectImages/savings_calculator.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/savings_calculator.svg" alt="Business Booking Experience">
               </div>
             </div>
 
@@ -404,10 +388,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/savings_calculator/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+ 
           </div>
         </div>
         <div class="blankHS"></div>
@@ -416,8 +397,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                <a href="/refining_rx_zero/">
-                  <img src="/projectImages/rx_zero.png" alt="RX Zero"></a>
+                  <img src="/projectImages/rx_zero.png" alt="RX Zero">
               </div>
             </div>
           </div>
@@ -450,10 +430,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/refining_rx_zero/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
 
         </div>
@@ -480,8 +457,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/admin_panel/">
-                  <img src="/projectImages/admin_panel.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/admin_panel.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -514,10 +490,7 @@
               </ul>
 
             </div>
-            <div class="element">
-              <a href="/admin_panel/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
+
           </div>
 
         </div>
