--- a/templates/projects.ejs
+++ b/templates/projects.ejs
@@ -28,11 +28,11 @@
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Designing UX that’s </h1>
+          <h1 class="specialTextTitleFirstLine fontWeight700">Designing UX that’s </h1>
           <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700">for users & businesses.</h1>
+          <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
 
 
           </h1>
@@ -104,12 +104,12 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">View resume
+        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
           </button></a>
 
       </div>
       <div class="element">
-        <a href="#about"> <button class="buttonLarge buttonFlip bgVWGrey">About me
+        <a href="#about"> <button class="buttonLarge buttonFlip bgVWGrey">Learn more about me
           </button></a>
       </div>
     </div>
