--- a/templates/projects25.ejs
+++ b/templates/projects25.ejs
@@ -28,10 +28,10 @@
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitleFirstLine fontWeight700">Designing UX that’s </h1>
-          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
-          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">Designing experiences that are</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
 
 
